<resources>
    <string name="app_name">AudioApp</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="pending_result">Pending result…</string>
    <string name="pcm_recorder">Pcm Recorder</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="waiting">Waiting…</string>
    <string name="baidu">Baidu</string>
    <string name="xunfei">Xunfei</string>
</resources>
